--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,9 +1,5 @@
 # =============================================
-# wrangler.toml — Worker ONLINE + Sync Cloud
-# - Durable Object "RoomDO" pour les salons
-# - KV AVATAR_CACHE (cache avatars IA)
-# - KV DC_SYNC pour les snapshots de stats
-# - CORS ALLOW_ORIGINS à adapter
+# wrangler.toml — Worker ONLINE + Sync Cloud + Dart Scanner
 # =============================================
 
 name = "darts-online"
@@ -32,6 +28,19 @@ id = "65729b90e2d44fbe90db28bda837cd63"
 binding = "DC_SYNC"
 id = "96adf0e2754949f88153f796c053d2cef"
 
+# 🔹 Variables d'environnement (UN SEUL bloc [vars] !)
 [vars]
 # ➜ Front : ton Pages + ton dev local
 ALLOW_ORIGINS = "http://localhost:5173,https://darts-counter-v5-3.pages.dev"
+
+# ➜ Base publique de ton bucket R2 pour les images de fléchettes
+PUBLIC_BASE_URL = "https://pub-170ceab787594ee9a09d6315358fb928.r2.dev"
+
+# 🔥 Ton bucket R2 réel
+[[r2_buckets]]
+binding = "DART_IMAGES_BUCKET"
+bucket_name = "dart-scans"
+
+# 🔹 Workers AI
+[ai]
+binding = "AI"
