--- a/wrangler.toml
+++ b/wrangler.toml
@@ -9,6 +9,9 @@ compatibility_date = "2024-11-15"
 # ✅ Active le support WebSocket / DO / Node
 compatibility_flags = ["nodejs_compat"]
 
+# ---------------------------------------------
+# Durable Object : RoomDO
+# ---------------------------------------------
 [durable_objects]
 bindings = [
   { name = "ROOMS", class_name = "RoomDO" }
@@ -18,29 +21,41 @@ bindings = [
 tag = "v1"
 new_classes = ["RoomDO"]
 
-# ➕ KV pour le cache des avatars IA (existant)
+# ---------------------------------------------
+# KV namespaces
+# ---------------------------------------------
+
+# Cache pour avatars IA
 [[kv_namespaces]]
 binding = "AVATAR_CACHE"
 id = "65729b90e2d44fbe90db28bda837cd63"
 
-# ➕ KV pour la synchronisation Cloud des stats (dc-sync)
+# Sync Cloud stats (dc-sync)
 [[kv_namespaces]]
 binding = "DC_SYNC"
 id = "96adf0e2754949f88153f796c053d2cef"
 
-# 🔹 Variables d'environnement (UN SEUL bloc [vars] !)
-[vars]
-# ➜ Front : ton Pages + ton dev local
-ALLOW_ORIGINS = "http://localhost:5173,https://darts-counter-v5-3.pages.dev"
-
-# ➜ Base publique de ton bucket R2 pour les images de fléchettes
-PUBLIC_BASE_URL = "https://pub-170ceab787594ee9a09d6315358fb928.r2.dev"
-
-# 🔥 Ton bucket R2 réel
+# ---------------------------------------------
+# R2 bucket pour les scans de fléchettes
+# ---------------------------------------------
 [[r2_buckets]]
 binding = "DART_IMAGES_BUCKET"
 bucket_name = "dart-scans"
 
-# 🔹 Workers AI
+# ---------------------------------------------
+# Workers AI
+# ---------------------------------------------
 [ai]
 binding = "AI"
+
+# ---------------------------------------------
+# Variables d'environnement
+# (⚠️ UN SEUL bloc [vars] !)
+# ---------------------------------------------
+[vars]
+# CORS : liste vide => on accepte toutes les origines
+# (pratique pour dev / StackBlitz / app; on resserrera plus tard)
+ALLOW_ORIGINS = ""
+
+# Base publique de ton bucket R2 (URL que tu m'as donnée)
+PUBLIC_BASE_URL = "https://pub-170ceab787594ee9a09d6315358fb928.r2.dev"
