--- a/package.json
+++ b/package.json
@@ -3,26 +3,23 @@
   "private": true,
   "version": "5.3.0",
   "type": "module",
-
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-
     "deploy:online": "CLOUDFLARE_API_TOKEN=Js3Bbrw_6N1RoqaAKcRSJY62NHt7OT3eCaadr2Sp CF_ACCOUNT_ID=d20710874f38557e1b8e34bb7c001812 npx wrangler deploy"
   },
-
   "dependencies": {
     "@supabase/supabase-js": "^2.48.0",
     "jsqr": "^1.4.0",
+    "lz-string": "^1.5.0",
     "nanoid": "^5.1.6",
     "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "recharts": "^3.3.0"
   },
-
   "devDependencies": {
     "@eslint/js": "^9.38.0",
     "@types/node": "^24.8.1",
